--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-         <titile> To Do List</titile>
+         <titile> </titile>
     </head>
     <body>
-        <h1>To Do List</h1>
+        <h1>Workshop To Do List</h1>
     <ul>
       <li>
         <input type="checkbox">
@@ -34,6 +34,9 @@
         Have a great workshop 0 pomodoros
       </li>
     </ul>
+    <input type="text" placeholder="Add a new Todo...."/>
+    <input type="number" placeholder="Promodoro estimate..."/>
+    <input type="submit" value="Add Todo"/>
   </body>
     
 </html>
