--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
 <html>
     <head>
          <titile> </titile>
-    </head>
+         <link rel="stylesheet" href="index.css" type="text/css"/>
+    </head>.
     <body>
         <h1>Workshop To Do List</h1>
     <ul>
       <li>
         <input type="checkbox">
-        <a href="show.html">Make the curriculum </a> 4 pomodoros
+        <a href="show.html">Make the curriculum </a> 
+        <span class="pomodoro-estimate">4 pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
-        Buy workshop supplies 3 pomodoros
+        Buy workshop supplies 
+        <span class="pomodoro-estimate">3 pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
-        Meet with the volunteer trainers 2 pomodoros
+        Meet with the volunteer trainers 
+        <span class="pomodoro-estimate">2 pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
-        Order food for Saturday and Sunday 1 pomodoro
+        Order food for Saturday and Sunday 
+        <span class="pomodoro-estimate">1 pomodoro</span>
       </li>
       <li>
         <input type="checkbox">
-        Check pre-work assignments 2 pomodoros
+        Check pre-work assignments
+        <span class="pomodoro-estimate">2 pomodoros</span>
+      </li>
+      
+      <li>
+        <input type="checkbox">
+        Send workshop location to all the students 
+        <span class="pomodoro-estimate">1 pomodoro </span>
       </li>
       <li>
         <input type="checkbox">
-        Send workshop location to all the students 1 pomodoro
-      </li>
-      <li>
-        <input type="checkbox">
-        Have a great workshop 0 pomodoros
+        Have a great workshop 
+        <span class="pomodoro-estimate">0 pomodoros</span>
       </li>
     </ul>
     <input type="text" placeholder="Add a new Todo...."/>
     <input type="number" placeholder="Promodoro estimate..."/>
-    <input type="submit" value="Add Todo"/>
+    <input id="add-new-todo-button"type="submit" value="Add Todo"/>
   </body>
     
 </html>
